add_executable(merge_sort_test merge_sort_test.cpp)

add_executable(quick_sort_test quick_sort_test.cpp)

add_executable(radix_sort_test radix_sort_test.cpp)

add_executable(count_sort_test count_sort_test.cpp)

add_executable(LSD_test LSD_test.cpp)

add_executable(MSD_test MSD_test.cpp)

add_executable(depth_first_search_test depth_first_search_test.cpp)

add_executable(depth_first_paths_test depth_first_paths_test.cpp)

add_executable(bread_first_paths_test bread_first_paths_test.cpp)

add_executable(connected_components_test connected_components_test.cpp)

add_executable(cycle_test cycle_test.cpp)

add_executable(two_color_test two_color_test.cpp)

add_executable(directed_dfs_test directed_dfs_test.cpp)

add_executable(directed_cycle_test directed_cycle_test.cpp)

add_executable(depth_first_order_test depth_first_order_test.cpp)

add_executable(kosaraju_scc_test kosaraju_scc_test.cpp)

add_executable(edge_weighted_graph_test edge_weighted_graph_test.cpp)

add_executable(lazy_prime_mst_test lazy_prime_mst_test.cpp)

add_executable(prime_mst_test prime_mst_test.cpp)

add_executable(kruskal_mst_test kruskal_mst_test.cpp)
