add_executable(singly_linked_list_test singly_linked_list_test.cpp)

add_executable(doubly_linked_list_test doubly_linked_list_test.cpp)

add_executable(circularly_linked_list_test circularly_linked_list_test.cpp)

add_executable(linked_stack_test linked_stack_test.cpp)

add_executable(linked_queue_test linked_queue_test.cpp)

add_executable(linked_deque_test linked_deque_test.cpp)

add_executable(node_list_test node_list_test.cpp)

add_executable(linked_binary_tree_test linked_binary_tree_test.cpp)

add_executable(euler_tour_test euler_tour_test.cpp)

add_executable(heap_priority_queue_test heap_priority_queue_test.cpp)

add_executable(hash_map_test hash_map_test.cpp)

add_executable(search_tree_test search_tree_test.cpp)

add_executable(avl_tree_test avl_tree_test.cpp)

add_executable(splay_tree_test splay_tree_test.cpp)

add_executable(rb_tree_test rb_tree_test.cpp)

add_executable(UF_test UF_test.cpp)
